:heavy_plus_sign: Adds `bash-utilities/trap-failure#1` submodule
**Adds**


- `modules/trap-failure` submodule, formats Bash errors and lines that 
lead up-to error state


**Edits**


- `.gitmodules` configuration file, adds trap failure submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = shared_functions/modules/argument-parser
 	url = git@github.com:bash-utilities/argument-parser.git
 	branch = master
+[submodule "trap-failure"]
+	path = shared_functions/modules/trap-failure
+	url = git@github.com:bash-utilities/trap-failure.git
+	branch = master
